--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "tle"
 version = "0.1.0"
 authors = ["Caleb Leinz <caleb@leinz.io>"]
 description = "A Two Line Element parser in rust"
+license = "MIT"
+repository = "https://github.com/cmleinz/tle"
+readme = "README.md"
+keywords = ["parser"]
+categories = ["parsing"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-nom = { version = "7.1.3" }
